platforms/macos/Dimmy/DimmyFFI.h

/// Register event callback. The native UI provides a function pointer that
/// receives JSON strings for events (recording_progress, chunk_status, etc.).
void dimmy_set_event_callback(void (*_Nonnull cb)(const char * _Nonnull));
// ── Utility ─────────────────────────────────────────────────────────

/// Check if an API key is configured. Returns 1=yes, 0=no.
int32_t dimmy_has_api_key(void);
/// Check if recording is active. Returns 1=yes, 0=no.
int32_t dimmy_is_recording(void);
// ── Local STT ──────────────────────────────────────────────────────

/// Get JSON array of available local models with download status.
/// Returns bytes written, or -1 on error.
int32_t dimmy_list_local_models(char * _Nonnull out_buf, int32_t buf_len);
// ── Local LLM ────────────────────────────────────────────────────────

/// Get JSON array of available local LLM models with download status.
int32_t dimmy_list_llm_models(char * _Nonnull out_buf, int32_t buf_len);
/// Get recent transcripts as JSON array. Returns bytes written, or -1 on error.
int32_t dimmy_history_recent(int32_t limit,
                             char * _Nonnull out_buf,
                             int32_t buf_len);
/// Search transcripts via full-text search. Returns bytes written, or -1 on error.
int32_t dimmy_history_search(const char * _Nonnull query,
                             int32_t limit,
                             char * _Nonnull out_buf,
                             int32_t buf_len);
/// Get history stats as JSON. Returns bytes written, or -1 on error.
int32_t dimmy_history_stats(char * _Nonnull out_buf, int32_t buf_len);
// ── Telemetry ──────────────────────────────────────────────────────

/// Submit user feedback through the telemetry pipeline. Best-effort:
/// returns 0 on success (queued) or empty input, -1 on precondition error.
/// Empty messages are silent no-ops.
int32_t dimmy_telemetry_capture_feedback(const char * _Nullable kind,
                                         const char * _Nullable message,
                                         const char * _Nullable email);
/// 1 = analytics on, 0 = off. Reflects the user toggle (PostHog).
int32_t dimmy_telemetry_is_enabled(void);
int32_t dimmy_telemetry_set_enabled(int32_t enabled);
/// 1 = crash reporting on, 0 = off. Reflects the user toggle (Sentry).
int32_t dimmy_telemetry_is_crash_enabled(void);
int32_t dimmy_telemetry_set_crash_enabled(int32_t enabled);
/// Anonymous distinct_id used by PostHog. Returns bytes written, or -1.
int32_t dimmy_telemetry_anonymous_id(char * _Nonnull out_buf, int32_t buf_len);
/// Wipe + regenerate the anonymous_id (used by "Reset analytics ID").
int32_t dimmy_telemetry_reset_anonymous_id(void);
/// Full telemetry status as JSON. Returns bytes written, or -1.
int32_t dimmy_telemetry_status(char * _Nonnull out_buf, int32_t buf_len);
// ── Autostart ──────────────────────────────────────────────────────

int32_t dimmy_autostart_is_enabled(void);
int32_t dimmy_autostart_set_enabled(int32_t enabled);
/// Build version (CARGO_PKG_VERSION). Returns bytes written, or -1.
int32_t dimmy_get_version(char * _Nonnull out_buf, int32_t buf_len);
/// Build flavor — "" (prod) or "staging". Embedded at compile time
/// via DIMMY_BUILD_FLAVOR. UIs surface a "STAGING" watermark on
/// non-prod flavors. Returns bytes written, or -1 on null buffer.
int32_t dimmy_build_flavor(char * _Nonnull out_buf, int32_t buf_len);
/// GPU known-bad marker status as JSON. Returns bytes written, or -1.
int32_t dimmy_gpu_get_status(char * _Nonnull out_buf, int32_t buf_len);
// ── Licensing ──────────────────────────────────────────────────────

// dimmy_license_set_server_url removed from the public ABI. The Rust
// implementation is now gated behind cfg(debug_assertions) and the
// Mac Settings UI that called it has been deleted. Release dylibs
// embed the URL via DIMMY_LICENSE_SERVER_URL at compile time.

/// Current license status as JSON. Schema:
///   { kind, tier?, days_remaining?, days_offline?, error?,
///     cloud_enabled, updates_enabled, scopes: [...] }
int32_t dimmy_license_status_json(char * _Nonnull out_buf, int32_t buf_len);
/// POST /api/trial/start { email }. Writes JSON {ok, magic_link?, error?}.
int32_t dimmy_license_request_trial(const char * _Nonnull email,
                                    char * _Nonnull out_buf,
                                    int32_t buf_len);
/// GET /api/activate?code=...&device_label=... — on success persists the
/// returned token to ~/.config/dimmy/license.json.
int32_t dimmy_license_redeem(const char * _Nonnull code,
                             const char * _Nullable device_label,
                             char * _Nonnull out_buf,
                             int32_t buf_len);
/// POST /api/refresh — bumps last_seen + rotates token.
int32_t dimmy_license_refresh(char * _Nonnull out_buf, int32_t buf_len);
/// Delete the on-disk license file. Useful for "Sign out". Returns 0=ok.
int32_t dimmy_license_clear(void);
/// Capability check: 1=scope present, 0=denied, -1=null input.
int32_t dimmy_license_has_scope(const char * _Nonnull scope_name);
/// POST /api/devices/list — JSON {ok, license_id, tier, max_devices, devices: [...]}.
int32_t dimmy_license_devices_list(char * _Nonnull out_buf, int32_t buf_len);
/// POST /api/devices/deactivate { device_id? }. Pass NULL to self-sign-out.
int32_t dimmy_license_device_deactivate(const char * _Nullable device_id,
                                        char * _Nonnull out_buf,
                                        int32_t buf_len);
/// POST /api/checkout/create — returns Stripe Checkout URL (or 409
/// with current_tier when the email already has an active license).
/// `tier` must be "monthly" | "annual" | "lifetime".
/// `email` is optional (NULL = anonymous / token-authenticated path).
int32_t dimmy_license_checkout_url(const char * _Nonnull tier,
                                   const char * _Nullable email,
                                   char * _Nonnull out_buf,
                                   int32_t buf_len);
/// POST /api/billing-portal — returns Stripe Customer Portal URL.
/// Only valid for paid licenses.
int32_t dimmy_license_billing_portal_url(char * _Nonnull out_buf, int32_t buf_len);
/// POST /api/plan-change — switch monthly⇄annual via Stripe subscription
/// update API (proration handled server-side). Reject path: lifetime tier
/// or first-purchase. After success, callers should call dimmy_license_refresh
/// to pick up the new tier in the local token.
int32_t dimmy_license_plan_change(const char * _Nonnull new_tier,
                                  char * _Nonnull out_buf,
                                  int32_t buf_len);